efk-stack/virtualservices.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: elasticsearch-vs
  namespace: log-system
spec:
  hosts:
  - elasticsearch.mycluster.mydomain
  gateways:
  - istio-gateways/mycluster-ingress
  http:
  - route:
    - destination:
        host: mycluster-es-http
        port:
          number: 9200

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-vs
  namespace: log-system
spec:
  hosts:
  - kibana.mycluster.mydomain
  gateways:
  - istio-gateways/mycluster-ingress
  http:
  - route:
    - destination:
        host: mycluster-kb-http
        port:
          number: 5601

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: elasticsearch-ds
  namespace: log-system
spec:
  host: mycluster-es-http
  trafficPolicy:
    tls:
      mode: SIMPLE

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kibana-ds
  namespace: log-system
spec:
  host: mycluster-kb-http
  trafficPolicy:
    tls:
      mode: SIMPLE
